Add Branch-prefix on status line

--- a/dottmux.conf
+++ b/dottmux.conf
@@ -24,7 +24,8 @@ bind-key -T copy-mode M-w send -X copy-pipe-and-cancel "xsel -ip && xsel -op | x
 
 # status line
 set-option -g status-right-length 200
-set -g status-right '#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) | \
+set -g status-right '\
+Branch: #(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD) | \
 Mem: #{mem_percentage}% | \
 CPU: #{cpu_icon} #{cpu_percentage} | \
 Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | \
