Improve split windows with path carried over

--- a/dottmux.conf
+++ b/dottmux.conf
@@ -7,8 +7,8 @@ set -g status-fg white
 set -g prefix C-o
 
 # split windows
-bind-key 2 split-window -v
-bind-key 3 split-window -h
+bind-key 2 split-window -vc "#{pane_current_path}"
+bind-key 3 split-window -hc "#{pane_current_path}"
 
 # resize pane
 bind-key -r B resize-pane -L 5
