--- a/dottmux.conf
+++ b/dottmux.conf
@@ -21,6 +21,7 @@ set -g mouse on
 
 # copy
 bind-key -T copy-mode M-w send -X copy-pipe-and-cancel "xsel -ip && xsel -op | xsel -ib"
+bind-key -T copy-mode MouseDragEnd1Pane send -X copy-pipe-and-cancel "xsel -ip && xsel -op | xsel -ib"
 
 # status line
 set-option -g status-right-length 200
